@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.213 2006/01/06 01:09:57 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.214 2006/01/07 17:38:31 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  warn user when choosing the GRP option and not Dynamic
 
   5 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
   Users.py: disable password fields if loading from profile, fix issue where
